Hacky hacky Java 16 (move back once Mixins gets their stuff together)