@@ -23,7 +23,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
@@ -53,6 +53,7 @@ repositories {
         name 'modmaven'
         url "https://modmaven.dev/"
     }
+    maven { url = 'https://repo.spongepowered.org/maven' }
 }
 
 dependencies {
@@ -85,14 +86,15 @@ dependencies {
     testImplementation("org.mockito:mockito-inline:3.9.0")
 
     // Annotation Processors
-    annotationProcessor 'org.spongepowered:mixin:0.8:processor'
+    annotationProcessor 'org.spongepowered:mixin:0.8.3-SNAPSHOT:processor'
 }
 group = artifact_group
 archivesBaseName = artifact_basename
 
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
-compileJava {
-    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(16))
+    }
 }
 
 // ensure everything uses UTF-8 and not some random codepage chosen by gradle
@@ -125,9 +127,16 @@ ext.isBeta = project.version.contains("beta")
 
 sourceSets {
     api
+    accessors
+    mixins {
+        compileClasspath += sourceSets.main.output
+    }
     main {
+        runtimeClasspath += sourceSets.mixins.output
         compileClasspath += sourceSets.api.output
         runtimeClasspath += sourceSets.api.output
+        compileClasspath += sourceSets.accessors.output
+        runtimeClasspath += sourceSets.accessors.output
         resources {
             srcDir 'src/generated/resources'
         }
@@ -139,7 +148,9 @@ sourceSets {
 }
 
 configurations {
-    apiCompile.extendsFrom(compile)
+    apiImplementation.extendsFrom(implementation)
+    mixinsImplementation.extendsFrom(implementation)
+    accessorsImplementation.extendsFrom(implementation)
 }
 
 test {
@@ -160,6 +171,8 @@ minecraft {
             property 'mixin.env.disableRefMap', 'true'
             workingDirectory project.file('run')
             property "mixin.debug.export", "true"
+            jvmArgs "--add-opens", "java.base/sun.security.util=ALL-UNNAMED"
+            jvmArgs "--add-opens", "java.base/java.util.jar=ALL-UNNAMED"
             mods {
                 appliedenergistics2 {
                     source sourceSets.main
@@ -210,7 +223,7 @@ if (System.getenv("KEY_STORE_FILE")) {
     signProps['keyPass'] = System.getenv("KEY_STORE_KEY_PASS")
 }
 
-task signJar(type: net.minecraftforge.gradle.common.task.SignJar, dependsOn: 'reobfJar') {
+task signJar(type: net.minecraftforge.gradle.common.tasks.SignJar, dependsOn: 'reobfJar') {
     onlyIf { !signProps.isEmpty() }
 
     if (!signProps.isEmpty()) {
@@ -225,7 +238,7 @@ task signJar(type: net.minecraftforge.gradle.common.task.SignJar, dependsOn: 're
 }
 
 //////////////
-// Aritfacts
+// Artifacts
 processResources {
     exclude '.cache'
 
@@ -396,4 +409,17 @@ if (System.getProperty("idea.sync.active") == "true") {
 // Gradle module metadata contains mapped dependencies, making our artifacts unconsumable
 tasks.withType(GenerateModuleMetadata) {
     enabled = false
+}
+
+afterEvaluate {
+    tasks.getByName("compileMixinsJava") {
+        release = "8"
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+    tasks.getByName("compileAccessorsJava") {
+        release = "8"
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
